--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -3,7 +3,35 @@
     font-size: 8vh;
     font-family: 'Space Grotesk', sans-serif;
 
-    background: -webkit-linear-gradient(#E5EFB8, #4b4e3f);
+    background: -webkit-linear-gradient(#dfef67, #4b4e3f);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+#main-home h2 {
+    text-align: center;
+    font-size: 4vh;
+    font-family: 'Mukta', sans-serif;
+}
+
+#main-home button {
+    transition: 0.3s;
+    cursor: pointer;
+    text-align: center;
+    font-size: 3vh;
+    font-family: 'Mukta', sans-serif;
+    padding: 1%;
+    background: -webkit-linear-gradient(#dfef67, #e1e4c8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border: 0.1em solid #e1e4c8;
+}
+
+#main-home button:hover {
+    transform: translateY(-5%);
+}
+
+#main-home img {
+    width: 30%;
+    pointer-events: none;
 }
