--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -20,10 +20,9 @@
     font-size: 3vh;
     font-family: 'Mukta', sans-serif;
     padding: 1%;
-    background: -webkit-linear-gradient(#dfef67, #e1e4c8);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    border: 0.1em solid #e1e4c8;
+    color: #cdd3b5;
+    background: transparent;
+    border: 0.1em solid #cdd3b5;
 }
 
 #main-home button:hover {
@@ -35,16 +34,26 @@
     pointer-events: none;
 }
 
+#main-home-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
 @media(max-width: 600px) {
+    #main-home h1 {
+        margin-top: 5%;
+    }
+
+    #main-home button {
+        padding: 2%;
+        font-size: 2.5vh;
+
+    }
+
     #main-home img {
         width: 100%;
         pointer-events: none;
         margin-block: 5%;
     }
-}
-
-#main-home-buttons {
-    display: flex;
-    width: 100%;
-    justify-content: center;
 }
